--- a/src/Components/ClothesCard/CardDetails/CardDetails.css
+++ b/src/Components/ClothesCard/CardDetails/CardDetails.css
@@ -16,6 +16,7 @@
 .card-details__scrollable {
 	flex: 1;
 	overflow-y: auto;
+	overflow-x: initial;
 	padding: 20px 20px 14px;
 	display: flex;
 	flex-direction: column;
@@ -34,7 +35,7 @@
 	display: flex;
 	flex-direction: column;
 	justify-content: space-between;
-	width: 90%;
+	width: 95%;
 }
 
 .card-details__header-text {
@@ -54,7 +55,7 @@
 	justify-content: center;
 	position: absolute;
 	top: .5rem;
-	right: .5rem;
+	right: .35rem;
 	width: 24px;
 	height: 24px;
 	border-radius: 50%;
@@ -138,6 +139,7 @@
 	display: flex;
 	align-items: center;
 	gap: 8px;
+	overflow-x: clip;
 }
 
 .card-details__color-circle {
@@ -354,5 +356,8 @@
   }
   .card-details__name {
     width: calc(var(--card-width) - 10px);
+  }
+  .card-details__header{
+	width: 93%;
   }
 }
